<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="@string/pa_key">


    <CheckBoxPreference
        android:defaultValue="false"
        android:key="@string/pa1_key"
        android:summary="@string/pa1_summary"
        android:title="@string/pa1_title" />

    <ListPreference
        android:defaultValue="1"
        android:entries="@array/tipusGrafics"
        android:entryValues="@array/tipusGraficValors"
        android:key="@string/pa2_key"
        android:title="@string/pa2_title"
        android:summary="@string/pa2_summary"/>

    <EditTextPreference
        android:defaultValue="3"
        android:key="@string/pa3_key"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pa3_title"
        android:summary="@string/pa3_summary"/>
    <PreferenceCategory android:title="Modo Multijugador">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pa4_key"
            android:title="@string/pa4_title" />
        <EditTextPreference
            android:defaultValue="2"
            android:key="@string/pa5_key"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pa5_title" />
        <ListPreference
            android:defaultValue="1"
            android:entries="@array/tipusCon"
            android:entryValues="@array/tipusConValors"
            android:key="@string/pa6_key"
            android:title="@string/pa6_title" />
    </PreferenceCategory>
</PreferenceScreen>